# Space-Bodies-Project

./: .gitignore  CMakeLists.txt  README.md  app  data.json  get_data.cpp  get_data.h  main  main.cpp  main_test.cpp  test_spacebody.cpp  user_discovered.csv
.github/: CODEOWNERS
.github/workflows/: build.yml
src/: classes.cpp  classes.h  get_data.cpp  get_data.h  planets.h  platform_config.h
